--- a/src/components/NavBar/Navbar.css
+++ b/src/components/NavBar/Navbar.css
@@ -93,6 +93,9 @@
     position: relative;
     cursor: pointer;
     margin-right: 5px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .cart-icon {
@@ -110,12 +113,31 @@
     height: 18px;
     width: 18px;
     border-radius: 50%;
+    display: none;
+    align-items: center;
+    justify-content: center;
+}
+
+.cart-badge-desktop{
+    background-color: #222;
+    color: white;
+    font-size: 11px;
+    font-weight: bold;
+    height: 18px;
+    width: 18px;
+    border-radius: 50%;
     display: flex;
     align-items: center;
     justify-content: center;
 }
 
 @media (max-width: 1100px) {
+    .cart-badge {
+        display: flex;
+    }
+    .cart-badge-desktop {
+        display: none;
+    }
     .desktop-links {
         display: none;
     }
